# fractal-generator

./: .gitignore  BUILD.md  COMPARISON.md  ChaosFinder.py  DEBUGGING.md  DESKTOP.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  PERFORMANCE.md  QUICKSTART.md  README.md  app.py  build-desktop.sh  build-manifest.json  build.js  components.py  debug-helpers.js  finder_components.py  fractal.js  fractal_wasm_bg.wasm  index.html  notion-embed.html  package-lock.json  package.json  requirements.txt  setup-wasm.sh  styles.css  test-fractal.js  test-installation.sh  test-report-2025-08-07.json  test-report-2025-08-08.json  test-report-2025-08-09.json  test-report-2025-08-10.json  test-ui-functionality.html  test-wasm.html  test_new_fractals.html  transform_components.py  wasm-integration-test.js
.github/: copilot-instructions.md
assets/: stylesheet.css
chaostech/: MathTech.py  Rule.py
deploy/: build-manifest.json  index.html
deploy/pkg/: fractal_wasm.d.ts  fractal_wasm.js  fractal_wasm_bg.wasm  fractal_wasm_bg.wasm.d.ts  package.json
docs/: OPTIMIZATIONS.md  PARAMETER_SPECS.md  README.md  fractal_test_cases.json
extracted-assets/: EXTRACTION_REPORT.md  README.md
extracted-assets/components/: chaos-finder-tab.md  chaos-game-tab.md
extracted-assets/css/: fractal-styles.css
extracted-assets/html-templates/: fractal-generator.html  test-layout.html
fractal-cli-demo/: Cargo.toml
fractal-cli-demo/src/: fractals.rs  main.rs
fractal-wasm/: Cargo.toml  fractal_wasm_bg.wasm  fractal_wasm_bg.wasm.d.ts
fractal-wasm/pkg/: fractal_wasm.d.ts  fractal_wasm.js  fractal_wasm_bg.wasm
fractal-wasm/src/: lib.rs
pkg/: fractal_wasm.d.ts  fractal_wasm.js  fractal_wasm_bg.wasm  fractal_wasm_bg.wasm.d.ts
python_implementation/: Fractal.py  README.md  app.py  requirements.txt  transform_components.py
python_implementation/chaostech/: __init__.py
python_implementation/docs/: FRACTAL_ALGORITHMS.md  test_cases.py
python_implementation/extracted-assets/components/: about-tab.md  transformations-tab.md
python_implementation/extracted-assets/css/: stylesheet.css
python_implementation/extracted-assets/documentation/: complete-inventory.md
python_implementation/extracted-assets/screenshots/: README.md
src-tauri/: Cargo.toml  desktop-index.html  tauri.conf.json
src-tauri/src/: fractals.rs  lib.rs  main.rs
wasm-frontend/: README.md  fractal-wasm  fractal.js  index.html  styles.css  test.html
