[package]
name = "fractal-generator-desktop"
version = "1.0.0"
description = "High-performance desktop fractal generator"
authors = ["Max Brodeur <maxbrodeur@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/maxbrodeur/fractal-generator"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The default library name, used for linking.
name = "fractal_generator_desktop"
# This will be available inside the application.
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-shell = "2.0"
tokio = { version = "1.0", features = ["full"] }
# Reuse the fractal computation dependencies from the WASM version
rand = { version = "0.8", features = ["getrandom"] }
once_cell = "1"
rayon = "1.0" # For parallel processing on desktop
image = "0.25" # For better image export capabilities
num_cpus = "1.0" # For system information

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]